<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/ranklabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranklabel"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ranklabel" 
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/countrylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ranklabel"
        android:text="@string/countrylabel"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rank"
        android:layout_toRightOf="@+id/countrylabel"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/populationlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countrylabel"
        android:text="@string/populationlabel" 
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_toRightOf="@+id/populationlabel" 
        android:layout_marginTop="18dp"/>

    <ImageView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="#000000"
        android:padding="1dp" />

    <TextView
        android:id="@+id/Isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/populationlabel"
        android:text="ISBN: "
        android:layout_marginTop="18dp" />
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Isbn" 
        android:layout_below="@+id/population"
        android:text="ISBNText" 
        android:layout_marginTop="18dp"/>
    
     <TextView
        android:id="@+id/Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Isbn"
        android:text="Version: "
        android:layout_marginTop="18dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Version"
        android:layout_below="@+id/textView1"
        android:text="VersionText" 
        android:layout_marginTop="18dp"/>
    
   <TextView
        android:id="@+id/Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Version"
        android:text="Category: "
        android:layout_marginTop="18dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Category" 
        android:layout_below="@+id/textView2"
        android:text="CategoryText" 
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/Condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Category"
        android:text="Condition: "
        android:layout_marginTop="18dp" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Condition" 
        android:layout_below="@+id/textView3"
        android:text="ConditionText"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Condition"
        android:text="Price: "
        android:layout_marginTop="18dp" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Price" 
        android:layout_below="@+id/textView4"
        android:layout_marginTop="18dp"
        android:text="PriceText" />
    
     <TextView
        android:id="@+id/Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Price"
        android:text="Description: "
        android:layout_marginTop="18dp" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Desc" 
        android:layout_below="@+id/textView5"
        android:text="Desctext" 
        android:layout_marginTop="18dp"/>

   


    

</RelativeLayout>